# scikit-anfis

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: chaotic_dynamics.py  data_PCD_1000.txt  data_Tip_441.mat  data_sinc_121.csv  iris.py  sinc_function.py  tipping_problem.py
src/skanfis/: __init__.py  antecedent_parsing.py  experimental.py  membership.py  scikit_anfis.py  utility.py
src/skanfis/fs/: __init__.py  fuzzy_aggregation.py  fuzzy_sets.py  fuzzy_systems.py  rule_parsing.py
